--- a/_config.yml
+++ b/_config.yml
@@ -9,37 +9,37 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: America/Toronto
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Virya cluster # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: guide, tips, examples # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  The doc site for Concordia CSSE students on how to use Virya GPU cluster for their research.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https:/oxigen-a.github.com"
 
 github:
-  username: github_username # change to your github username
+  username: oxigen-a # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: oxigen-a # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: CSSE Tech Officer
+  email: virya.help@concordia.ca # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/oxigen-a # change to your twitter homepage
+    - https://github.com/oxigen-a # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -73,7 +73,8 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: con-logo.jpg
+  #https://cdn.freebiesupply.com/logos/large/2x/concordia-university-2-logo-png-transparent.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
